--- a/index.html
+++ b/index.html
@@ -1,3 +1,273 @@
-<html>
-  Em manutenção
-</html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>F5LLW Accounts 💰</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #5C6BC0, #1A237E);
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
+    .container {
+      background: rgba(0, 0, 0, 0.7);
+      padding: 40px;
+      border-radius: 15px;
+      width: 100%;
+      max-width: 450px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 8px;
+      background: #2C3E50;
+      color: #fff;
+      font-size: 16px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 8px;
+      background: #6A82FB;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background: #5C6BC0;
+    }
+    .link {
+      font-size: 14px;
+    }
+    .link span {
+      color: #6A82FB;
+      cursor: pointer;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .modal-content {
+      background: #34495E;
+      padding: 30px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 500px;
+    }
+    .modal button {
+      background: #E74C3C;
+      padding: 8px;
+      border-radius: 5px;
+      cursor: pointer;
+      color: white;
+      border: none;
+    }
+    .modal button:hover {
+      background: #C0392B;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container" id="loginContainer">
+    <img src="https://cdn.discordapp.com/attachments/1358986567984611511/1367519947500032040/AI_Generated_Logo_2025-04-29_83e1f9b9-953b-4c8e-ace7-3b9a8a12a2e8.png" style="width: 100px; margin-bottom: 20px;" />
+    <h2>Login</h2>
+    <input type="email" id="loginEmail" placeholder="Seu email" />
+    <input type="password" id="loginPassword" placeholder="Sua senha" />
+    <button onclick="login()">Entrar</button>
+    <p class="link">Não tem uma conta? <span onclick="showRegister()">Registrar</span></p>
+  </div>
+
+  <div class="container" id="registerContainer" style="display:none;">
+    <img src="https://cdn.discordapp.com/attachments/1358986567984611511/1367519947500032040/AI_Generated_Logo_2025-04-29_83e1f9b9-953b-4c8e-ace7-3b9a8a12a2e8.png" style="width: 100px; margin-bottom: 20px;" />
+    <h2>Registrar Conta</h2>
+    <input type="email" id="registerEmail" placeholder="Seu email" />
+    <input type="password" id="registerPassword" placeholder="Sua senha" />
+    <button onclick="register()">Registrar</button>
+    <p class="link">Já tem uma conta? <span onclick="showLogin()">Entrar</span></p>
+  </div>
+
+  <div class="container" id="adminPanel" style="display:none;">
+    <img src="https://cdn.discordapp.com/attachments/1358986567984611511/1367519947500032040/AI_Generated_Logo_2025-04-29_83e1f9b9-953b-4c8e-ace7-3b9a8a12a2e8.png" style="width: 100px; margin-bottom: 20px;" />
+    <h2>Painel de Admin</h2>
+    <h3>Contas à Venda</h3>
+    <ul id="productList"></ul>
+    <button onclick="showAddProduct()">Adicionar Produto</button>
+    <button onclick="logout()">Sair</button>
+  </div>
+
+  <div class="container" id="userPanel" style="display:none;">
+    <img src="https://cdn.discordapp.com/attachments/1358986567984611511/1367519947500032040/AI_Generated_Logo_2025-04-29_83e1f9b9-953b-4c8e-ace7-3b9a8a12a2e8.png" style="width: 100px; margin-bottom: 20px;" />
+    <h2>Produtos Disponíveis</h2>
+    <ul id="userProductList"></ul>
+    <button onclick="logout()">Sair</button>
+  </div>
+
+  <div class="modal" id="productModal">
+    <div class="modal-content">
+      <h3 id="modalProductName"></h3>
+      <p id="modalProductDescription"></p>
+      <p id="modalProductPrice"></p>
+      <p id="modalProductQuantity"></p>
+      <p>Para pagar, use a chave Pix: <strong>cf31d103-7d5e-40af-b7d2-b268ce5d59a6</strong></p>
+      <a href="https://discord.gg/jugM23wQRq" target="_blank"><button>Verificar Pagamento</button></a>
+      <button onclick="closeModal()">Fechar</button>
+    </div>
+  </div>
+
+  <script>
+    let users = JSON.parse(localStorage.getItem('users')) || [];
+    let products = JSON.parse(localStorage.getItem('products')) || [];
+    let currentUser = null;
+
+    function showLogin() {
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('loginContainer').style.display = 'block';
+    }
+
+    function showRegister() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'block';
+    }
+
+    function login() {
+      const email = document.getElementById('loginEmail').value;
+      const password = document.getElementById('loginPassword').value;
+      const user = users.find(u => u.email === email && u.password === password);
+      if (user) {
+        currentUser = user;
+        alert('Login bem-sucedido!');
+        if (email === 'willianwca2011@gmail.com') showAdminPanel();
+        else showUserPanel();
+      } else {
+        alert('Email ou senha inválidos!');
+      }
+    }
+
+    function register() {
+      const email = document.getElementById('registerEmail').value;
+      const password = document.getElementById('registerPassword').value;
+      if (users.some(u => u.email === email)) {
+        alert('Este email já está registrado!');
+      } else {
+        users.push({ email, password });
+        localStorage.setItem('users', JSON.stringify(users));
+        alert('Conta registrada com sucesso!');
+        showLogin();
+      }
+    }
+
+    function logout() {
+      currentUser = null;
+      document.getElementById('adminPanel').style.display = 'none';
+      document.getElementById('userPanel').style.display = 'none';
+      document.getElementById('productModal').style.display = 'none';
+      showLogin();
+    }
+
+    function showAdminPanel() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('adminPanel').style.display = 'block';
+      loadProducts();
+    }
+
+    function showUserPanel() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('userPanel').style.display = 'block';
+      loadUserProducts();
+    }
+
+    function loadProducts() {
+      const productList = document.getElementById('productList');
+      productList.innerHTML = '';
+      products.forEach((product, index) => {
+        const item = document.createElement('li');
+        item.innerText = `${product.name} - R$${product.price}`;
+        const removeBtn = document.createElement('button');
+        removeBtn.textContent = 'Remover';
+        removeBtn.onclick = () => removeProduct(index);
+        const buyBtn = document.createElement('button');
+        buyBtn.textContent = 'Comprar';
+        buyBtn.onclick = () => showProductDetails(index);
+        item.appendChild(removeBtn);
+        item.appendChild(buyBtn);
+        productList.appendChild(item);
+      });
+    }
+
+    function loadUserProducts() {
+      const userList = document.getElementById('userProductList');
+      userList.innerHTML = '';
+      const filtered = products.filter(p => p.creator === 'willianwca2011@gmail.com');
+      filtered.forEach((product, index) => {
+        const item = document.createElement('li');
+        item.innerText = `${product.name} - R$${product.price}`;
+        const buyBtn = document.createElement('button');
+        buyBtn.textContent = 'Comprar';
+        buyBtn.onclick = () => showProductDetails(index);
+        item.appendChild(buyBtn);
+        userList.appendChild(item);
+      });
+    }
+
+    function showAddProduct() {
+      const name = prompt('Nome do produto:');
+      const description = prompt('Descrição:');
+      const price = prompt('Preço:');
+      const quantity = prompt('Quantidade:');
+      if (name && description && price && quantity) {
+        products.push({ name, description, price, quantity, creator: currentUser.email });
+        localStorage.setItem('products', JSON.stringify(products));
+        loadProducts();
+      }
+    }
+
+    function removeProduct(index) {
+      products.splice(index, 1);
+      localStorage.setItem('products', JSON.stringify(products));
+      loadProducts();
+    }
+
+    function showProductDetails(index) {
+      const product = products[index];
+      document.getElementById('modalProductName').innerText = product.name;
+      document.getElementById('modalProductDescription').innerText = product.description;
+      document.getElementById('modalProductPrice').innerText = `Preço: R$${product.price}`;
+      document.getElementById('modalProductQuantity').innerText = `Quantidade: ${product.quantity}`;
+      document.getElementById('productModal').style.display = 'flex';
+    }
+
+    function closeModal() {
+      document.getElementById('productModal').style.display = 'none';
+    }
+  </script>
+</body>
+  </html>
+  
