--- a/index.html
+++ b/index.html
@@ -1,9 +1,297 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>F5LLW Accounts</title><style>body{font-family:sans-serif;background:linear-gradient(135deg,#5C6BC0,#1A237E);margin:0;padding:0;height:100vh;display:flex;justify-content:center;align-items:center;color:#fff}.container{background:rgba(0,0,0,0.7);padding:40px;border-radius:15px;width:100%;max-width:450px;box-shadow:0 0 20px rgba(0,0,0,0.5);text-align:center}input,button{width:100%;padding:12px;margin:10px 0;border:none;border-radius:8px;font-size:16px}input{background:#2C3E50;color:#fff}button{background:#6A82FB;color:#fff;cursor:pointer}button:hover{background:#5C6BC0}.link{font-size:14px}.link span{color:#6A82FB;cursor:pointer}.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center}.modal-content{background:#34495E;padding:30px;border-radius:10px;width:80%;max-width:500px}.modal button{background:#E74C3C;color:#fff}.modal button:hover{background:#C0392B}</style></head><body>
-<div class="container" id="a"><h2>Login</h2><input type="email" id="b" placeholder="Seu email"/><input type="password" id="c" placeholder="Sua senha"/><button onclick="d()">Entrar</button><p class="link">Não tem uma conta? <span onclick="f()">Registrar</span></p></div>
-<div class="container" id="e" style="display:none;"><h2>Registrar Conta</h2><input type="email" id="g" placeholder="Seu email"/><input type="password" id="h" placeholder="Sua senha"/><button onclick="i()">Registrar</button><p class="link">Já tem uma conta? <span onclick="j()">Entrar</span></p></div>
-<div class="container" id="k" style="display:none;"><h2>Painel de Admin</h2><h3>Contas à Venda</h3><ul id="l"></ul><button onclick="m()">Adicionar Produto</button><button onclick="n()">Sair</button></div>
-<div class="container" id="o" style="display:none;"><h2>Produtos Disponíveis</h2><ul id="p"></ul><button onclick="n()">Sair</button></div>
-<div class="modal" id="q"><div class="modal-content"><h3 id="r"></h3><p id="s"></p><p id="t"></p><p id="u"></p><p>Pix: <strong>cf31d103-7d5e-40af-b7d2-b268ce5d59a6</strong></p><a href="https://discord.gg/jugM23wQRq" target="_blank"><button>Verificar Pagamento</button></a><button onclick="v()">Fechar</button></div></div>
-<script>let w=JSON.parse(localStorage.getItem("users"))||[],x=JSON.parse(localStorage.getItem("products"))||[],y=null;function j(){document.getElementById("e").style.display="none",document.getElementById("a").style.display="block"}function f(){document.getElementById("a").style.display="none",document.getElementById("e").style.display="block"}function d(){let a=document.getElementById("b").value,b=document.getElementById("c").value,c=w.find(d=>d.email===a&&d.password===b);c?(y=c,alert("Login bem-sucedido!"),"willianwca2011@gmail.com"===a?z():A()):alert("Email ou senha inválidos!")}function i(){let a=document.getElementById("g").value,b=document.getElementById("h").value;w.some(c=>c.email===a)?alert("Email já registrado!"):(
-w.push({email:a,password:b}),localStorage.setItem("users",JSON.stringify(w)),alert("Conta registrada!"),j())}function n(){y=null,["k","o","q"].forEach(a=>document.getElementById(a).style.display="none"),j()}function z(){["a","e"].forEach(a=>document.getElementById(a).style.display="none"),document.getElementById("k").style.display="block",B()}function A(){["a","e"].forEach(a=>document.getElementById(a).style.display="none"),document.getElementById("o").style.display="block",C()}function B(){let a=document.getElementById("l");a.innerHTML="",x.forEach((b,c)=>{let d=document.createElement("li");d.innerText=`${b.name} - R$${b.price}`;let e=document.createElement("button");e.textContent="Remover",e.onclick=()=>E(c);let f=document.createElement("button");f.textContent="Comprar",f.onclick=()=>F(c);d.appendChild(e),d.appendChild(f),a.appendChild(d)})}function C(){let a=document.getElementById("p");a.innerHTML="";x.filter(b=>b.creator==="willianwca2011@gmail.com").forEach((b,c)=>{let d=document.createElement("li");d.innerText=`${b.name} - R$${b.price}`;let e=document.createElement("button");e.textContent="Comprar",e.onclick=()=>F(c);d.appendChild(e),a.appendChild(d)})}function m(){let a=prompt("Nome:"),b=prompt("Descrição:"),c=prompt("Preço:"),d=prompt("Quantidade:");a&&b&&c&&d&&(x.push({name:a,description:b,price:c,quantity:d,creator:y.email}),localStorage.setItem("products",JSON.stringify(x)),B())}function E(a){x.splice(a,1),localStorage.setItem("products",JSON.stringify(x)),B()}function F(a){let b=x[a];["r","s","t","u"].forEach((c,d)=>document.getElementById(c).innerText=[b.name,b.description,"Preço: R$"+b.price,"Quantidade: "+b.quantity][d]),document.getElementById("q").style.display="flex"}function v(){document.getElementById("q").style.display="none"}</script>
-</body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>F5LLW Accounts</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: linear-gradient(135deg, #5C6BC0, #1A237E);
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
+    .container {
+      background: rgba(0, 0, 0, 0.7);
+      padding: 40px;
+      border-radius: 15px;
+      width: 100%;
+      max-width: 450px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      text-align: center;
+    }
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    input {
+      background: #2C3E50;
+      color: #fff;
+    }
+    button {
+      background: #6A82FB;
+      color: #fff;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #5C6BC0;
+    }
+    .link {
+      font-size: 14px;
+    }
+    .link span {
+      color: #6A82FB;
+      cursor: pointer;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: #34495E;
+      padding: 30px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 500px;
+    }
+    .modal button {
+      background: #E74C3C;
+      padding: 8px;
+      border-radius: 5px;
+      cursor: pointer;
+      color: white;
+      border: none;
+    }
+    .modal button:hover {
+      background: #C0392B;
+    }
+    .product-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+    }
+    .product-item img {
+      width: 50px;
+      height: 50px;
+      margin-right: 10px;
+    }
+    .product-item button {
+      margin-left: 5px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container" id="loginContainer">
+    <h2>Login</h2>
+    <input type="email" id="loginEmail" placeholder="Seu email" />
+    <input type="password" id="loginPassword" placeholder="Sua senha" />
+    <button onclick="login()">Entrar</button>
+    <p class="link">Não tem uma conta? <span onclick="showRegister()">Registrar</span></p>
+  </div>
+
+  <div class="container" id="registerContainer" style="display:none;">
+    <h2>Registrar Conta</h2>
+    <input type="email" id="registerEmail" placeholder="Seu email" />
+    <input type="password" id="registerPassword" placeholder="Sua senha" />
+    <button onclick="register()">Registrar</button>
+    <p class="link">Já tem uma conta? <span onclick="showLogin()">Entrar</span></p>
+  </div>
+
+  <div class="container" id="adminPanel" style="display:none;">
+    <h2>Painel de Admin</h2>
+    <h3>Contas à Venda</h3>
+    <ul class="product-list" id="productList"></ul>
+    <button onclick="showAddProduct()">Adicionar Produto</button>
+    <button onclick="logout()">Sair</button>
+  </div>
+
+  <div class="container" id="userPanel" style="display:none;">
+    <h2>Produtos Disponíveis</h2>
+    <ul class="product-list" id="userProductList"></ul>
+    <button onclick="logout()">Sair</button>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal" id="productModal">
+    <div class="modal-content">
+      <h3 id="modalProductName"></h3>
+      <p id="modalProductDescription"></p>
+      <p id="modalProductPrice"></p>
+      <p id="modalProductQuantity"></p>
+      <label for="purchaseQuantity">Quantidade:</label>
+      <input type="number" id="purchaseQuantity" min="1" />
+      <button onclick="processPurchase()">Verificar Pagamento</button>
+      <button onclick="closeModal()">Fechar</button>
+    </div>
+  </div>
+
+  <script>
+    let users = JSON.parse(localStorage.getItem('users')) || [];
+    let products = JSON.parse(localStorage.getItem('products')) || [];
+    let currentUser = null;
+
+    function showLogin() {
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('loginContainer').style.display = 'block';
+    }
+
+    function showRegister() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'block';
+    }
+
+    function login() {
+      const email = document.getElementById('loginEmail').value;
+      const password = document.getElementById('loginPassword').value;
+      const user = users.find(u => u.email === email && u.password === password);
+      if (user) {
+        alert('Login bem-sucedido!');
+        currentUser = user;
+        if (currentUser.email === 'willianwca2011@gmail.com') {
+          showAdminPanel();
+        } else {
+          showUserPanel();
+        }
+      } else {
+        alert('Email ou senha inválidos!');
+      }
+    }
+
+    function register() {
+      const email = document.getElementById('registerEmail').value;
+      const password = document.getElementById('registerPassword').value;
+      if (users.some(u => u.email === email)) {
+        alert('Este email já está registrado!');
+      } else {
+        users.push({ email, password });
+        localStorage.setItem('users', JSON.stringify(users));
+        alert('Conta registrada com sucesso!');
+        showLogin();
+      }
+    }
+
+    function showAdminPanel() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('adminPanel').style.display = 'block';
+      loadProducts();
+    }
+
+    function showUserPanel() {
+      document.getElementById('loginContainer').style.display = 'none';
+      document.getElementById('registerContainer').style.display = 'none';
+      document.getElementById('userPanel').style.display = 'block';
+      loadUserProducts();
+    }
+
+    function logout() {
+      currentUser = null;
+      document.getElementById('adminPanel').style.display = 'none';
+      document.getElementById('userPanel').style.display = 'none';
+      document.getElementById('productModal').style.display = 'none';
+      showLogin();
+    }
+
+    function loadProducts() {
+      const productList = document.getElementById('productList');
+      productList.innerHTML = '';
+      products.forEach((product, index) => {
+        const listItem = document.createElement('li');
+        listItem.classList.add('product-item');
+        listItem.innerHTML = `<img src="https://i.imgur.com/FvvsHi4.png" alt="Logo" /> ${product.name} - R$${product.price} - Estoque: ${product.quantity}`;
+        const removeButton = document.createElement('button');
+        removeButton.textContent = 'Remover';
+        removeButton.onclick = () => removeProduct(index);
+        const buyButton = document.createElement('button');
+        buyButton.textContent = 'Comprar';
+        buyButton.onclick = () => showProductDetails(index);
+        listItem.appendChild(removeButton);
+        listItem.appendChild(buyButton);
+        productList.appendChild(listItem);
+      });
+    }
+
+    function loadUserProducts() {
+      const userProductList = document.getElementById('userProductList');
+      userProductList.innerHTML = '';
+      products.forEach((product, index) => {
+        const listItem = document.createElement('li');
+        listItem.classList.add('product-item');
+        listItem.innerHTML = `<img src="https://i.imgur.com/FvvsHi4.png" alt="Logo" /> ${product.name} - R$${product.price} - Estoque: ${product.quantity}`;
+        const buyButton = document.createElement('button');
+        buyButton.textContent = 'Comprar';
+        buyButton.onclick = () => showProductDetails(index);
+        listItem.appendChild(buyButton);
+        userProductList.appendChild(listItem);
+      });
+    }
+
+    function removeProduct(index) {
+      if (currentUser.email === 'willianwca2011@gmail.com') {
+        products.splice(index, 1);
+        localStorage.setItem('products', JSON.stringify(products));
+        loadProducts();
+      }
+    }
+
+    function showProductDetails(index) {
+      const product = products[index];
+      document.getElementById('modalProductName').innerText = product.name;
+      document.getElementById('modalProductDescription').innerText = product.description;
+      document.getElementById('modalProductPrice').innerText = `Preço: R$${product.price}`;
+      document.getElementById('modalProductQuantity').innerText = `Estoque: ${product.quantity}`;
+      document.getElementById('productModal').style.display = 'flex';
+    }
+
+    function closeModal() {
+      document.getElementById('productModal').style.display = 'none';
+    }
+
+    function processPurchase() {
+      const quantity = parseInt(document.getElementById('purchaseQuantity').value);
+      const productName = document.getElementById('modalProductName').innerText;
+      const product = products.find(p => p.name === productName);
+
+      if (quantity > product.quantity) {
+        alert('Quantidade em estoque insuficiente!');
+      } else if (quantity <= 0) {
+        alert('Por favor, selecione uma quantidade válida.');
+      } else {
+        product.quantity -= quantity;
+        localStorage.setItem('products', JSON.stringify(products));
+        alert('Compra processada! Verifique o pagamento.');
+        closeModal();
+      }
+    }
+
+    function showAddProduct() {
+      const name = prompt('Nome do produto:');
+      const description = prompt('Descrição do produto:');
+      const price = parseFloat(prompt('Preço do produto:'));
+      const quantity = parseInt(prompt('Quantidade do produto:'));
+      products.push({ name, description, price, quantity });
+      localStorage.setItem('products', JSON.stringify(products));
+      loadProducts();
+    }
+
+  </script>
+</body>
+</html>
